# SigPDE

./: LICENSE  README.md  pyproject.toml  samplers.py  setup.cfg  test.ipynb  test2.ipynb  test3.ipynb
sigpde/: BatchIterator.py  PDESolvers.py  __init__.py  bufferFactory.py  cuda_device_functions.py  cuda_gram_kernels.py  cuda_pairwise_kernels.py  sigpde_base.py  utils.py
sigpde/jax/: kernel.py
sigpde/torch/: __init__.py  kernel.py  old.py  static_kernels.py
