[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SigPDE"
version = "0.1.0"
description = "Efficient computations of signature kernels by solving a Goursat PDE."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Lucas Støjko Andersen", email = "lucashillerod@hotmail.com"}
]
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "numba"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"